fixing the homepage bug

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://J-VonDohren.github.io/portfolio",
+  "homepage": "https://j-vondohren.github.io/React-Portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
